--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "Speed Test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -31,9 +31,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-flash": "^0.0.2",
     "express-handlebars": "^7.1.2",
-    "express-session": "^1.17.3",
     "pg-promise": "^11.5.4"
   }
 }
