--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "AGPL-version-3.0",
   "private": false,
   "engines": {
-    "node": ">= 16.0.0",
+    "node": ">= 14.0.0",
     "npm": ">= 6.0.0"
   },
   "homepage": "",
@@ -25,8 +25,7 @@
   "contributors": [],
   "scripts": {
     "dev": "",
-    "test": "mocha --exit",
-    "start": "node index.js"
+    "test": "mocha"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
